# notion-ai-assistant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  run.py  run_telegram.py
scripts/: google_auth.py
src/notion_assistant/: agent.py
src/notion_assistant/clients/: google_calendar_client.py  mcp_client.py
src/notion_assistant/config/: __init__.py  controls_loader.py  schema_manager.py
src/notion_assistant/interfaces/: __init__.py  scheduler.py  telegram_bot.py
src/notion_assistant/nodes/: agent_nodes.py
src/notion_assistant/parsers/: nl_parser.py
src/notion_assistant/states/: state.py
src/notion_assistant/tools/: action_handlers.py
src/notion_assistant/utils/: retry.py
tests/: test_mcp_connection.py  test_mcp_simple.py  test_schemas.py  test_transport.py
