[project]
name = "notion-ai-assistant"
version = "0.3.0"
description = "Natural language interface to Notion via LangGraph and FastMCP"
requires-python = ">=3.13"
authors = [
    { name = "Miras Kasymkhan", email = "miras@kascurated.com" }
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0", 
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastmcp>=3.0.0b1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-telegram-bot[webhooks]>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.black]
target-version = ["py310"] 
line-length = 88
